# hanium

./: .gitignore  bentopackaging.py  chatbot.py  decoder_only_ver.py  package-lock.json  pyproject.toml  requirements.txt
app/: package.json
app/src/: auth-login.html  auth-register.html  index.html  login.js  register.js  socket.js  welcome.html
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py
config/: asgi.py  settings.py  urls.py
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
myvenv/hansvenv/: pyvenv.cfg
myvenv/hansvenv/Scripts/: activate  activate.bat
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_address.py
users/templates/users/: authentication_email.html
