[tool.poetry]
name = "hanium-backend"
version = "0.1.0"
description = ""
authors = ["minsuhaha <haminsu5@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hanium_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
